--- a/precompiled/include/openssl/ssl.h.in
+++ b/precompiled/include/openssl/ssl.h.in
@@ -25,6 +25,7 @@ use OpenSSL::stackhash qw(generate_stack_macros generate_const_stack_macros);
 # endif
 
 # include <openssl/e_os2.h>
+# include <openssl/e_ostime.h>
 # include <openssl/opensslconf.h>
 # include <openssl/comp.h>
 # include <openssl/bio.h>
@@ -2347,7 +2348,7 @@ __owur int SSL_get_stream_write_error_code(SSL *ssl, uint64_t *app_error_code);
 #define SSL_CONN_CLOSE_FLAG_TRANSPORT   (1U << 1)
 
 typedef struct ssl_conn_close_info_st {
-    uint64_t    error_code;
+    uint64_t    error_code, frame_type;
     const char  *reason;
     size_t      reason_len;
     uint32_t    flags;
